src/libbulletc/src/btConvexShape_wrap.h

#include "main.h"

extern "C"
{
	EXPORT void btConvexShape_batchedUnitVectorGetSupportingVertexWithoutMargin(btConvexShape* obj, btVector3* vectors, btVector3* supportVerticesOut, int numVectors);
	EXPORT void btConvexShape_getAabbNonVirtual(btConvexShape* obj, btScalar* t, btScalar* aabbMin, btScalar* aabbMax);
	EXPORT void btConvexShape_getAabbSlow(btConvexShape* obj, btScalar* t, btScalar* aabbMin, btScalar* aabbMax);
	EXPORT btScalar btConvexShape_getMarginNonVirtual(btConvexShape* obj);
	EXPORT int btConvexShape_getNumPreferredPenetrationDirections(btConvexShape* obj);
	EXPORT void btConvexShape_getPreferredPenetrationDirection(btConvexShape* obj, int index, btScalar* penetrationVector);
	EXPORT void btConvexShape_localGetSupportingVertex(btConvexShape* obj, btScalar* vec);
	EXPORT void btConvexShape_localGetSupportingVertexWithoutMargin(btConvexShape* obj, btScalar* vec);
	EXPORT void btConvexShape_localGetSupportVertexNonVirtual(btConvexShape* obj, btScalar* vec);
	EXPORT void btConvexShape_localGetSupportVertexWithoutMarginNonVirtual(btConvexShape* obj, btScalar* vec);
	EXPORT void btConvexShape_project(btConvexShape* obj, btScalar* trans, btScalar* dir, btScalar* min, btScalar* max);
}